fix crash in filemd5 without correct index SERVER-3913